# PythonSamples

./: pyproject.toml  pyproject_old.toml
0_basics/: 0_primitives.py  4_sets.py  5_if_else_for_each.py
0_basics/6_functions/: 0_basics.py  2_args_kwargs.py
0_basics/7_packages/: main.py  pkg1.py
100_API/1_Flask/2_routing/: app.py  pyproject.toml
100_API/1_simplest/: README.md
100_API/2_FastAPI/0_simple/: README.md  main.py  pyproject.toml  test_server.py
1_intermediate/1_generators/: main.py
1_intermediate/2_context_manager/0_by_method/: main.py
1_intermediate/2_context_manager/1_by_class/: main2.py
200_algorithms/: Readme.md  patterns.md
200_algorithms/1_algorithms/0_sort/: heap_sort.py  insertion_sort.py  quick_sort.py  selection_sort.py
200_algorithms/1_algorithms/1_search/: interpolation_search.py
200_algorithms/1_algorithms/3_complexity/: 1_recognize_by_code_pattern.py  3_space_complexity.py  4_tricky_cases.py  README.md
200_algorithms/2_patterns/: README.md
200_algorithms/2_patterns/1_prefix_sum/: README.md
200_algorithms/2_patterns/2_two_pointers_pattern/: README.md
200_algorithms/3_patterns/12_backtracking/: code_39.py  code_51.py  code_78.py  code_79.py
200_algorithms/3_patterns/13_dynamic_programming/: code_1143.py  code_198.py  code_221.py  code_309.py  code_312.py  code_337.py  code_416.py  code_62.py  code_64.py  code_70.py  code_72.py  code_91.py
200_algorithms/3_patterns/1_prefix_sum/: code_560.md
200_algorithms/3_patterns/5_linked-list_reversal_inplace/: code_143.py  code_206.py  code_25.py
200_algorithms/3_patterns/6_monotonic_stack/: code_84.py  code_907.py
200_algorithms/3_patterns/7_overlapping_intervals/: code_meeting_rooms.py
200_algorithms/3_patterns/8_top_k_elements/: code_215.py
200_algorithms/algorithms/0_sort/: README.md  bubble_sort.py  heap_sort.py  merge_sort.py
200_algorithms/algorithms/1_search/: README.md  binary_search.py  jump_search.py  linear_search.py
201_interview/1_algorithms/3_complexity/: README.md
201_interview/2_patterns/: TODO.md
2_OOP/: 0_basics.py
3_concurrency/0_old_legacy_way/: 0_yield.py  3_pipeline.py
3_concurrency/1_asyncio/0_basics/: main.py  main1.py  (+1 more)
49_GUI/2_Qt/2_async/test-1/: pyproject.toml
4_parallelism/: README.md
4_parallelism/3_multiprocessing/: main.py
50_libraries/0_numpy/: pyproject.toml
50_libraries/1_pandas/: pyproject.toml
50_libraries/2_matplotlib/1_with_GTK/: pyproject.toml
50_libraries/2_matplotlib/1_with_GTK/0_basics/: main.py
50_libraries/2_matplotlib/1_with_GTK/1_two_plots_vs_two_axes/: main.py
50_libraries/2_matplotlib/1_with_GTK/3_two_plots_vs_subplots/: main.py
50_libraries/3_pymongo/: pyproject.toml
50_libraries/4_pystore/: main.py  main2.py  pyproject.toml
50_libraries/5_NATS/: README.md
50_libraries/5_NATS/project-1/: client-1.py  client-2.py  pyproject.toml
5_others/: x_file_io.py  x_inputs.py  x_random.py  x_type.py
project1/: x_random.py
project1.egg-info/: PKG-INFO  SOURCES.txt
project1/0_basics/: 2_dictionary.py
project1/1_functions/: 2_args_kwargs.py  3_map.py
project1/2_OOP/: 1_inheritance_polymorphism.py
pythonsamples.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pythonsamples/0_basics/: 0_primitives.py  1_lists.py  2_tuples.py  3_dictionary.py  3_tuples.py
pythonsamples/1_functions/: 0_basics.py  4_filter.py  5_lambda_expression.py
pythonsamples/2_OOP/: 0_basics.py  1_inheritance_polymorphism.py
pythonsamples/3_concurrency/: README.md
pythonsamples/49_GUI/2_Qt/0_basics/test-2/: main.ui  pyproject.toml
(+371 files in other folders)
