[tool.poetry]
name = "test-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10.6"
flask = "^2.3.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = {version = "^19.10b0", allow-prereleases = true}
rope = "^0.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.masonry.api"