[tool.poetry]
name = "test-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
pyqt6 = "^6.4.2"
pyqtgraph = "^0.13.1"

[tool.poetry.group.dev.dependencies]
rope = "^1.7.0"
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"